# game2048-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
model/: cargo.toml
model/src/: field.rs  game.rs  lib.rs
panelgui/: Cargo.toml
panelgui/src/: background_panel.rs  button_panel.rs  control.rs  globals.rs  interop.rs  lib.rs  main_window.rs  message_box_panel.rs  numerics.rs  panel.rs  ribbon_panel.rs  text_panel.rs  window_target.rs  window_target.rs.bak
src/: Package.appxmanifest  background_panel.rs  button_panel.rs  control.rs  game_field.rs  game_field_panel.rs  game_score.rs  game_window.rs  main.rs  ribbon.rs  ribbon_panel.rs  text_panel.rs
