[package]
name = "game2048-rs"
version = "0.1.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.23.0"
winrt ={ git = "https://github.com/microsoft/winrt-rs" }
bindings = { path = "bindings" }
model = { path = "model" }
panelgui = { path = "panelgui" }
float-ord = "0.2"
lazy_static = "1.4.0"