[package]
name = "panelgui"
version = "0.1.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.24.0"
raw-window-handle = "0.3.3"
windows = "0.3.1"
bindings = { path = "../bindings" }
float-ord = "0.2"
enumflags2="0.7.0-preview1"
derive_builder="0.9"
lazy_static="1.4"